--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@react-oauth/google": "^0.12.1",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "clsx": "^2.0.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "framer-motion": "^10.16.4",
-    "clsx": "^2.0.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
