--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "^5.6.0",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.8.4",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
@@ -31,5 +34,8 @@
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
     "yup": "^1.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.6.0"
   }
 }
