--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
+    "sass": "^1.69.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
