--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "framer-motion": "^10.16.4",
+    "ioredis": "^5.3.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
@@ -31,9 +32,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
-    "sass": "^1.69.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
